--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://oleh-andrusiv.github.io/to-do-list",
+  "homepage": "http://oleh-andrusiv.github.io/react-to-do-list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
